# Chat_PYSIDE_linux_frontend

./: .env.example  .gitignore  .pre-commit-config.yaml  ENVIRONMENT_SETUP.md  PROJECT_RULES.md  PROVIDER_OPTIMIZATIONS.md  PlAN.md  README.md  THEME_SYSTEM.md  demo_markdown.py  demo_ui_changes.py  pyproject.toml  test_full_wipe_notification.py  test_list_fix.py  test_material_icons.py  test_themes.py
.github/workflows/: ci.yml
resources/: resources.qrc
resources/themes/: dark.qss  light.qss
scripts/: build_resources.py
src/: __init__.py  app.py  config.py  resources_rc.py
src/config/: __init__.py  backend_profiles.py  config_manager.py  env_config.py  provider_config.py  user_config.py
src/controllers/: __init__.py  main_window.py  websocket_client.py
src/themes/: __init__.py  font_manager.py  icon_button.py  theme_applier.py  theme_config.py  theme_manager.py
src/ui/: __init__.py  backend_settings_widget.py  markdown_formatter.py  settings_dialog.py
tests/: __init__.py  conftest.py  test_app.py  test_config.py  test_main_window.py  test_websocket_client.py
